changed the font-size of the inputs in contact page to prevent zooming in the browser on mobile devices

--- a/src/styles/scss/contact.scss
+++ b/src/styles/scss/contact.scss
@@ -30,6 +30,7 @@
   input,
   textarea {
     padding: 0.3rem;
+    font-size: 1rem;
     border: 1px solid #ccc;
     font-family: inherit;
 
